--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+  
+.shopitem {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  background: #f5f5f5;
+  padding-right: 20px;
+  border-bottom: 1px solid #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.listview {
+  display: block; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.shopitem > img {
+  height: 100px;
+  padding-left: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.btn {
+  display: inline-block; 
+  background: none;
+  text-transform: uppercase;
+  border: 1px solid red;
+  border-radius: 30px;
+  color: red;
+  font: 900 13px Arial;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: linear-gradient(135deg, #a61322, #d33f34);
+  border: 1px solid #a61322;
+  color: white;
+  font: 900 13px Arial;
+  cursor: pointer;
+}
+
+h2 {
+  text-transform: uppercase;
+}
+
+.shopcard {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 5px 10px;
+  padding: 20px;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.5); /* Параметры тени */
+  display: block; 
+  float: left;
+ 
+    
+}
+
+.shopcard img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  display: flex; 
   flex-direction: column;
   align-items: center;
+}
+
+.footer {
+  margin-top: 135px;
+  display: flex; 
+  justify-content: space-between;
+ 
+
+}
+
+.cardview {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.material-icons {
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
